--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <meta property="og:url" content="https://ssmn93.github.io/334bot-official">
   <meta name="twitter:card" content="summary_large_image">
   <meta property="og:site_name" content="334bot">
+  <meta name="google-site-verification" content="-G4Xg-6chW_5D3zmvbLHM6_5sy0fGJALsZ4qaY6tO3Y" />
   <title>334bot｜"王道を往く"、そんなbotへ。</title>
 </head>
 <body>
