--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
     <div class="main">
       <div class="start">
-        <img src="https://cdn.glitch.global/db27db86-791c-40f5-9ee5-9cd4045e87ea/ba4d2824-5af2-4452-b29e-01d3550bb746.image.png?v=1731154285493" alt="botプロフ">
+        <img src="https://raw.githubusercontent.com/ssmn93/334bot-official/main/picture/Screenshot%202025-05-30%2017.03.40.png" alt="botプロフ">
         <div class="start2">
           <h1 class="welcomeh1">334botへようこそ！</h1>
           <p>334botは、「"王道を往く"、そんなbotへ。」のキャッチコピーのもと、2023年11月から開発が始まったdiscordの多機能BOTです。</p>   
