--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="&quot;王道を往く&quot;、そんなbotへ。discordの多機能bot「334bot」の公式ホームページです。">
   <link rel="icon" href="https://cdn.glitch.global/db27db86-791c-40f5-9ee5-9cd4045e87ea/icon.png?v=1730011051492" />
   <link rel="stylesheet" href="style.css">
+  <link rel="canonical" href="https://ssmn93.github.io/334bot-official/">
   <meta property="og:image" content="https://cdn.glitch.global/db27db86-791c-40f5-9ee5-9cd4045e87ea/334bot%20OGP.png?v=1731158153688">
   <meta property="og:description" content="discordの多機能bot「334bot」の公式ホームページです。">
   <meta property="og:title" content="334bot｜&quot;王道を往く&quot;、そんなbotへ。">
