--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img src="https://raw.githubusercontent.com/ssmn93/334bot-official/main/picture/Screenshot%202025-05-30%2017.09.44.png" alt="botプロフ">
         <div class="start2">
           <h1 class="welcomeh1">334botへようこそ！</h1>
-          <p>334botは、「"王道を往く"、そんなbotへ。」のキャッチコピーのもと、2023年11月から開発が始まったdiscordの多機能BOTです。</p>   
+          <p>334botは、「"王道を往く"、そんなbotへ。」のキャッチコピーのもと、2023年11月に開発が始まったdiscordの多機能BOTです。</p>   
         </div>
       </div>
       <div class="welcome">
@@ -112,7 +112,7 @@
     </div>
     <hr />
     <p class="copyright">
-      © 2024 <a href="https://ssmn93.github.io/334bot-official">334bot</a>
+      © 2025 <a href="https://ssmn93.github.io/334bot-official">334bot</a>
     </p>
   </footer>
 </body>
