--- a/howto.html
+++ b/howto.html
@@ -173,8 +173,8 @@
           <img src="https://cdn.glitch.global/db27db86-791c-40f5-9ee5-9cd4045e87ea/bbdee041-cc90-4ac1-a02c-ce2593b23584.image.png?v=1731463713753" alt="Channel">
           チャンネル系機能の設定(334signalなど) /channel
         </div>
-        <div onclick="window.location.href='https://ssmn93.github.io/334bot-official/howto.html#:~:text=%E3%82%B3%E3%83%94%E3%83%BC-,/channel,-%E3%83%81%E3%83%A3%E3%83%B3%E3%83%8D%E3%83%AB%E7%B3%BB%E6%A9%9F%E8%83%BD'">
-          <img src="https://cdn.glitch.global/db27db86-791c-40f5-9ee5-9cd4045e87ea/bbdee041-cc90-4ac1-a02c-ce2593b23584.image.png?v=1731463713753" alt="Channel">
+        <div onclick="window.location.href='https://ssmn93.github.io/334bot-official/howto.html#:~:text=%E3%82%B3%E3%83%94%E3%83%BC-,/ticket,-%E3%83%81%E3%82%B1%E3%83%83%E3%83%88%E6%A9%9F%E8%83%BD'">
+          <img src="https://cdn.glitch.global/db27db86-791c-40f5-9ee5-9cd4045e87ea/d1d31594-f3da-4b7b-8564-55b8e1bec68d.image.png?v=1731460473032" alt="Ticket">
           チケット機能 /ticket
         </div>
         <div onclick="window.location.href='https://ssmn93.github.io/334bot-official/howto.html#:~:text=%E3%82%B3%E3%83%94%E3%83%BC-,%E3%83%81%E3%83%A3%E3%83%B3%E3%83%8D%E3%83%AB%E7%B3%BB%E6%A9%9F%E8%83%BD,-%E2%80%BB1%E3%81%AE%E3%81%A4%E3%81%8F'">
